# requests_cach_example

./: .gitignore  .pre-commit-config.yaml  config.py  github_cache.sqlite  pyproject.toml  requirements.txt
app/: __init__.py  app.py
app/templates/: index.html
