[tool.poetry]
name = "mocking"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
httpx = "^0.16.1"
requests-cache = "^0.5.2"
flask = "^1.1.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pyperclip = "^1.8.1"
ipython = "^7.18.1"
prettyprinter = "^0.18.0"
pytest-emoji = "^0.2.0"
pytest-picked = "^0.4.4"
pytest-html = "^2.1.1"
pytest-cov = "^2.10.1"
respx = "^0.14.0"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
